8023191: OSR nmethods should be flushed to free space in CodeCache

Treat OSR nmethods like normal nmethods and flush them if they are cold/unused.

Reviewed-by: kvn